--- a/discussion.tex
+++ b/discussion.tex
@@ -12,6 +12,8 @@ So the patterns in headless relatives follow from the relative pronouns in the l
 
 Wouldn't we now not expect that Modern German patterns with Old High German wrt attraction in headed constructions. Yes, we would. And yes, this is exactly what we see. Paper by Bader on case attraction.
 
+First there was only the relative pronoun with a D. Then we did case competition with this one, in both directions. Later, we only did it with the wh, and we only had internal left. Because this competitor was introduced, the case competition with D disappeared.
+
 \section{Why \tsc{fem} does not have \tsc{wh}-pronouns}
 
 \section{Relativization in general}
@@ -22,4 +24,24 @@ relativization = the morpheme
 some languages have both, so it has be at least two features
 
 
-\section{The lack of internal dative and external accusative}
+Another language that only allows the internal case to surface after it wins the case competition.
+
+\tit{valita} `choose' takes a partitive object
+
+\ex. Valitsen mista sina piddt.
+choose-I.el what-el you like-you.part
+'I choose what you like.'
+
+
+\tit{pitää} `like' takes elative objects
+
+\exg. *Pidan mista sind valitset.\\
+like-I.part what-el you choose-you.el\\
+`I like what you choose.'
+
+\exg. *Pidan mita sind valitset.\\
+like-I.part what-el you choose-you.el\\
+`I like what you choose.'
+
+
+x
