nog altijd aan ch4

--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -23,6 +23,81 @@ The description of Gothic is mostly based on \citep{harbert1978}. The spelling o
 <http://www.wulfila.be>
 } The glossing comes from the detailed tagging on that same website. The translations are my own.
 
+Let me first
+
+Consider the example in \ref{ex:gothicnomnom}, in which the internal case and the external case are nominative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is nominative. The predicate \tit{matjai} `eats' takes nominative subjects.
+The external case is nominative as well. Here the predicate \tit{gadauþnai} `die' takes nominative subjects.
+The relative pronoun \tit{sa} `who.\ac{nom}' appears in the nominative.
+
+\exg. ei \tcol{DG}{sa} \tcol{DG}{-ei} \tcol{DG}{þis} \tcol{DG}{matjai}, ni gadauþnai\\
+that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
+`that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
+
+Consider the example in \ref{ex:gothicaccaccrep}, repeated from the introduction. In this example, the internal case and the external case are accusative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is accusative. The predicate \tit{arma} `pity' takes accusative objects.
+The external case is accusative as well. Here the predicate \tit{gaarma} `pity' takes accusative objects.
+The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in the accusative.
+
+\exg. gaarma \tcol{DG}{þan} \tcol{DG}{-ei} \tcol{DG}{arma}\\
+ pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
+ `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
+
+Consider the examples in \ref{ex:gothicdatdat}, in which the internal case and the external case are dative.
+The relative clauses, including the relative pronoun, is marked in gray.
+The internal case is dative. The predicates \tit{gabaur} `tribute', \tit{mota} `custom', \tit{agis} `fear' and \tit{sweriþa} `honour' takes dative objects.
+The external case is dative as well. The same predicates as in the relative clause take dative objects.
+The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
+
+\ex.\label{ex:gothicdatdat}
+\ag. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{gabaur} gabaur\\
+who.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
+`tribute to (him) whom tribute is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{mota} mota\\
+\tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{custom\scsub{[dat]}} custom\scsub{[dat]}\\
+`custom to (him) whom custom is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{agis} agis\\
+\tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{fear\scsub{[dat]}} fear\scsub{[dat]}\\
+`fear (him) whom fear is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{sweriþa} sweriþa\\
+\tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{honour\scsub{[dat]}} honour\scsub{[dat]}\\
+`honour (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}
+
+
+\begin{table}[H]
+ \center
+ \caption{Extensive summary of Gothic headless relatives}
+ \begin{tabular}{c|c|c|c}
+   \toprule
+     \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+         & [\ac{nom}]
+         & [\ac{acc}]
+         & [\ac{dat}]
+         \\ \cmidrule{1-4}
+     [\ac{nom}]
+         & \ac{nom}
+         &
+         &
+         \\ \cmidrule{1-4}
+     [\ac{acc}]
+         &
+         & \ac{acc}
+         &
+         \\ \cmidrule{1-4}
+     [\ac{dat}]
+         &
+         &
+         & \ac{dat}
+         \\
+   \bottomrule
+ \end{tabular}
+   \label{tbl:summary-gothic-nom-acc}
+\end{table}
+
+From here the competition starts.
+
 I start with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external nominative case.
@@ -62,19 +137,19 @@ The light gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the 
          & [\ac{dat}]
          \\ \cmidrule{1-4}
      [\ac{nom}]
-         & \xcancel{\phantom{xx}}
+         & \ac{nom}
          & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{acc}}}
          &
          \\ \cmidrule{1-4}
      [\ac{acc}]
          & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{*\ac{nom}}
-         & \xcancel{\phantom{xx}}
+         & \ac{acc}
          &
          \\ \cmidrule{1-4}
      [\ac{dat}]
          &
          &
-         & \xcancel{\phantom{xx}}
+         & \ac{dat}
          \\
    \bottomrule
  \end{tabular}
@@ -116,19 +191,19 @@ The two examples in which nominative and dative compete are showed in Table \ref
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \diagbox[linecolor=white]{*\ac{nom}}{\ac{acc}}
           & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{dat}}}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \diagbox[linecolor=white]{\ac{acc}}{*\ac{nom}}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           &
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{nom}}
           &
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -177,19 +252,19 @@ The two examples in which accusative and dative compete are showed in Table \ref
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \diagbox[linecolor=white]{*\ac{nom}}{{\ac{acc}}}
           & \diagbox[linecolor=white]{*\ac{nom}}{{\ac{dat}}}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \diagbox[linecolor=white]{{\ac{acc}}}{*\ac{nom}}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \diagbox[linecolor=white]{*\ac{acc}}{\colorbox{LG}{\ac{dat}}}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \diagbox[linecolor=white]{{\ac{dat}}}{*\ac{nom}}
           & \diagbox[linecolor=white]{\colorbox{DG}{(\ac{dat})}}{*\ac{acc}}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
