--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -40,19 +40,19 @@ The three cells in the lower left corner are the situations in which the interna
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -76,19 +76,19 @@ The three cells in the upper right corner are the situations in which the extern
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & *
            & *
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & *
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -112,19 +112,19 @@ The three cells in the upper right corner are the situations in which the extern
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & *
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -150,19 +150,19 @@ The three cells in the upper right corner are the situations in which the extern
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & *
            & *
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & *
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & *
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -187,19 +187,19 @@ This section discusses the situation in which the internal case or the external 
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -262,19 +262,19 @@ The two examples in which nominative and accusative compete are highlighted in T
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \cellcolor{LG}\ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \cellcolor{DG}\ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{dat}
           & \ac{dat}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -316,19 +316,19 @@ The two examples in which nominative and dative compete are highlighted in Table
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \ac{acc}
           & \cellcolor{LG}\ac{dat}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \cellcolor{DG}\ac{dat}
           & \ac{dat}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -370,19 +370,19 @@ The two examples in which accusative and dative compete are highlighted in Table
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \cellcolor{LG}\ac{dat}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{dat}
           & \cellcolor{DG}\ac{dat}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -423,26 +423,35 @@ This section discusses the situation in which only the internal case is allowed 
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & *
            & *
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & *
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
     \label{tbl:case-competition-only-int-repeated}
 \end{table}
 
-An example of a language that shows this pattern is Modern German. In this section I discuss the Modern German data, based on the research of \citet{vogel2001}.
+An example of a language that shows this pattern is Modern German. In this section I discuss the Modern German data, based on the research of \citet{vogel2001}. %adapted from.. glosses translations judgements
+
+\exg. Uns besucht wer Maria mag\\
+us visits who-NOM Maria-ACC likes\\ 343
+
+\exg. Ich lade ein, wen auch Maria mag\\
+I invite who-ACC also Maria likes'\\ 344
+
+\exg. Ich vertraue, wem Maria gefällt\\
+I trust who-DAT Maria-ΝΟΜ pleases\\ p. 345
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative. Following the internal-only requirement, only when the accusative case is the internal case, the sentence is grammatical.
 
@@ -493,19 +502,19 @@ The two examples in which nominative and accusative compete are highlighted in T
             & [\ac{dat}]
             \\ \cmidrule{1-4}
         [\ac{nom}]
-            & \xcancel{\phantom{xx}}
+            & \ac{nom}
             & \cellcolor{LG}*
             & *
             \\ \cmidrule{1-4}
         [\ac{acc}]
             & \cellcolor{DG}\ac{acc}
-            & \xcancel{\phantom{xx}}
+            & \ac{acc}
             & *
             \\ \cmidrule{1-4}
         [\ac{dat}]
             & \ac{dat}
             & \ac{dat}
-            & \xcancel{\phantom{xx}}
+            & \ac{dat}
             \\
       \bottomrule
    \end{tabular}
@@ -561,19 +570,19 @@ The two examples in which nominative and dative compete are highlighted in Table
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & *
            & \cellcolor{LG}*
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & *
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \cellcolor{DG}\ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -629,19 +638,19 @@ The two examples in which nominative and dative compete are highlighted in Table
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & *
            & *
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \cellcolor{LG}*
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \cellcolor{DG}\ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -668,19 +677,19 @@ This section discusses the situation in which only the external case is allowed 
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & *
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -717,19 +726,19 @@ This example is compatible with the picture of Classical Greek only allowing the
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \cellcolor{LG}\ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & *
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -749,19 +758,19 @@ However, the example is also compatible with the picture of Classical Greek allo
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \cellcolor{LG}\ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -796,19 +805,19 @@ This example shows that Classical Greek is not an instance of the third possible
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \cellcolor{DG}\ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \cellcolor{LG}\ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -836,19 +845,19 @@ This section discusses the situation in which neither the internal nor the exter
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & *
            & *
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & *
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & *
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -905,12 +914,12 @@ The two examples in which nominative and dative compete are highlighted in Table
            & [\ac{dat}]
            \\ \cmidrule{1-3}
        [\ac{acc}]
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \cellcolor{LG}{*}
            \\ \cmidrule{1-3}
        [\ac{dat}]
            & \cellcolor{DG}{*}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -1003,19 +1012,19 @@ Table \ref{tbl:no-case-competition-int} shows the pattern of a language in which
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \ac{nom}
           & \ac{nom}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \ac{acc}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{dat}
           & \ac{dat}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -1035,19 +1044,19 @@ Table \ref{tbl:no-case-competition-ext} shows the pattern of a language in which
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \ac{nom}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{nom}
           & \ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -1083,19 +1092,19 @@ This example is compatible with three patterns. First, Old English could be a ca
             & [\ac{dat}]
             \\ \cmidrule{1-4}
         [\ac{nom}]
-            & \xcancel{\phantom{xx}}
+            & \ac{nom}
             & \ac{acc}
             & \cellcolor{LG}\ac{dat}
             \\ \cmidrule{1-4}
         [\ac{acc}]
             & *
-            & \xcancel{\phantom{xx}}
+            & \ac{acc}
             & \ac{dat}
             \\ \cmidrule{1-4}
         [\ac{dat}]
             & *
             & *
-            & \xcancel{\phantom{xx}}
+            & \ac{dat}
             \\
       \bottomrule
    \end{tabular}
@@ -1115,19 +1124,19 @@ Second, Old English could be a case competition language that allows the interna
              & [\ac{dat}]
              \\ \cmidrule{1-4}
          [\ac{nom}]
-             & \xcancel{\phantom{xx}}
+             & \ac{nom}
              & \ac{acc}
              & \cellcolor{LG}\ac{dat}
              \\ \cmidrule{1-4}
          [\ac{acc}]
              & \ac{acc}
-             & \xcancel{\phantom{xx}}
+             & \ac{acc}
              & \ac{dat}
              \\ \cmidrule{1-4}
          [\ac{dat}]
              & \ac{dat}
              & \ac{dat}
-             & \xcancel{\phantom{xx}}
+             & \ac{dat}
              \\
        \bottomrule
     \end{tabular}
@@ -1147,19 +1156,19 @@ Third, Old English could be a language without case competition that lets the re
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \cellcolor{LG}\ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{nom}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{nom}
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
    \end{tabular}
@@ -1197,19 +1206,19 @@ This example shows that Old English is not an instance of the pattern in Section
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \ac{acc}
           & \cellcolor{LG}\ac{dat}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \ac{nom}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{nom}
           & \cellcolor{DG}\ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -1242,19 +1251,19 @@ This example is compatible with three patterns. First, Modern Greek could be a c
             & [\ac{gen}]
             \\ \cmidrule{1-4}
         [\ac{nom}]
-            & \xcancel{\phantom{xx}}
+            & \ac{nom}
             & \cellcolor{LG}\ac{acc}
             & \ac{gen}
             \\ \cmidrule{1-4}
         [\ac{acc}]
             & *
-            & \xcancel{\phantom{xx}}
+            & \ac{acc}
             & \ac{gen}
             \\ \cmidrule{1-4}
         [\ac{gen}]
             & *
             & *
-            & \xcancel{\phantom{xx}}
+            & \ac{dat}
             \\
       \bottomrule
    \end{tabular}
@@ -1274,19 +1283,19 @@ Second, Modern Greek could be a case competition language that allows the intern
              & [\ac{gen}]
              \\ \cmidrule{1-4}
          [\ac{nom}]
-             & \xcancel{\phantom{xx}}
+             & \ac{nom}
              & \cellcolor{LG}\ac{acc}
              & \ac{gen}
              \\ \cmidrule{1-4}
          [\ac{acc}]
              & \ac{acc}
-             & \xcancel{\phantom{xx}}
+             & \ac{acc}
              & \ac{gen}
              \\ \cmidrule{1-4}
          [\ac{gen}]
              & \ac{gen}
              & \ac{gen}
-             & \xcancel{\phantom{xx}}
+             & \ac{dat}
              \\
        \bottomrule
     \end{tabular}
@@ -1306,19 +1315,19 @@ Third, Modern Greek could be a language without case competition that lets the r
            & [\ac{gen}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \cellcolor{LG}\ac{acc}
            & \ac{gen}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{nom}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \ac{gen}
            \\ \cmidrule{1-4}
        [\ac{gen}]
            & \ac{nom}
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
    \end{tabular}
@@ -1362,19 +1371,19 @@ This example shows that Modern Greek is not an instance of the pattern in Sectio
           & [\ac{gen}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \cellcolor{LG}\ac{acc}
           & \ac{gen}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \cellcolor{DG}\ac{nom}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \ac{gen}
           \\ \cmidrule{1-4}
       [\ac{gen}]
           & \ac{nom}
           & \ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -1418,19 +1427,19 @@ I combine
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \ac{nom}
           & \ac{nom}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \ac{acc}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{dat}
           & \ac{dat}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -1448,19 +1457,19 @@ I combine
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \xcancel{\phantom{xx}}
+          & \ac{nom}
           & \ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \ac{nom}
-          & \xcancel{\phantom{xx}}
+          & \ac{acc}
           & \ac{dat}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{nom}
           & \ac{acc}
-          & \xcancel{\phantom{xx}}
+          & \ac{dat}
           \\
     \bottomrule
   \end{tabular}
@@ -1479,19 +1488,19 @@ I combine
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -1510,19 +1519,19 @@ I combine
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & *
            & *
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & \ac{acc}
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & *
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & \ac{dat}
            & \ac{dat}
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -1541,19 +1550,19 @@ I combine
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & \ac{dat}
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & *
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -1572,19 +1581,19 @@ I combine
            & [\ac{dat}]
            \\ \cmidrule{1-4}
        [\ac{nom}]
-           & \xcancel{\phantom{xx}}
+           & \ac{nom}
            & *
            & *
            \\ \cmidrule{1-4}
        [\ac{acc}]
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{acc}
            & *
            \\ \cmidrule{1-4}
        [\ac{dat}]
            & *
            & *
-           & \xcancel{\phantom{xx}}
+           & \ac{dat}
            \\
      \bottomrule
   \end{tabular}
@@ -1622,34 +1631,34 @@ I combine
 
 \begin{figure}[H]
   \centering
-    \begin{tikzpicture}[node distance=2.5cm]
+    \begin{tikzpicture}[node distance=2cm]
     \node (question1) [question]
-    {case competition?};
-        \node (question4) [question, below of=question1, xshift=-4cm]
+    {case\\ competition?};
+        \node (question4) [question, below of=question1, xshift=-3cm, yshift=-1cm]
         {\ac{int}/\ac{ext}?};
-            \node (outcome5) [outcome, below of=question4, xshift=-1.5cm]
+            \node (outcome5) [outcome, below of=question4, xshift=-2cm]
             {\ac{int}};
-                \node (example1) [example, below of=outcome5, yshift=1.2cm]
-                {\footnotesize{n.a.}};
-            \node (outcome1) [outcome, below of=question4, xshift=1.5cm]
+                \node (example5) [example, below of=outcome5, yshift=0.5cm]
+                {\footnotesize{n.a.\\\phantom{x}\\\phantom{x}}};
+            \node (outcome1) [outcome, below of=question4, xshift=2cm]
             {\ac{ext}};
-                \node (example1) [example, below of=outcome1, yshift=1.2cm]
-                {\footnotesize{e.g. Old English, Modern Greek}};
-        \node (question2) [question, below of=question1, xshift=1.5cm]
+                \node (example1) [example, below of=outcome1, yshift=0.5cm]
+                {\footnotesize{e.g. Old English, Modern Greek\\\phantom{x}}};
+        \node (question2) [question, below of=question1, xshift=3cm, yshift=-1cm]
         {\ac{int} as winner?};
-            \node (outcome2) [outcome, below of=question2, xshift=-4cm]
+            \node (outcome2) [outcome, below of=question2, xshift=-2cm]
             {*};
-                \node (example2) [example, below of=outcome2, yshift=1.4cm]
-                {\footnotesize{e.g. Polish}};
-            \node (question3) [question, below of=question2, xshift=1.5cm]
+                \node (example2) [example, below of=outcome2, yshift=0.5cm]
+                {\footnotesize{e.g. Polish\\\phantom{x}\\\phantom{x}}};
+            \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-0.5cm]
             {\ac{ext} as winner?};
-                \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
+                \node (outcome3) [outcome, below of=question3, xshift=-2cm]
                 {\ac{int} + complex};
-                    \node (example3) [example, below of=outcome3, yshift=1.4cm]
-                    {\footnotesize{e.g. Modern German}};
-                \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
+                    \node (example3) [example, below of=outcome3, yshift=0.5cm]
+                    {\footnotesize{e.g. Modern German\\\phantom{x}\\\phantom{x}}};
+                \node (outcome4) [outcome, below of=question3, xshift=2cm]
                 {complex};
-                    \node (example3) [example, below of=outcome4, yshift=1cm]
+                    \node (example3) [example, below of=outcome4, yshift=0.5cm]
                     {\footnotesize{e.g. Gothic, Old High German, Classical Greek}};
 
     \draw [arrow] (question1) -- node[anchor=west] {yes} (question2);
@@ -1658,12 +1667,12 @@ I combine
     \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
     \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
     \draw [arrow] (question1) -- node[anchor=east] {no} (question4);
-    \draw [arrow] (question2) -- node[anchor=east] {int} (outcome5);
-    \draw [arrow] (question2) -- node[anchor=west] {ext} (outcome1);
+    \draw [arrow] (question4) -- node[anchor=east] {\tsc{int}} (outcome5);
+    \draw [arrow] (question4) -- node[anchor=west] {\tsc{ext}} (outcome1);
     \end{tikzpicture}
 
     \caption{Overview attested headless relatives}
     \label{fig:typology1}
 \end{figure}
 
-x
+hallo
